[gd_scene load_steps=4 format=3 uid="uid://qbuh1qcqkey7"]

[ext_resource type="Texture2D" uid="uid://dxqs8xqijoq1y" path="res://bordertest.png" id="1_nn38w"]
[ext_resource type="Script" uid="uid://xaalbjgskoyx" path="res://configuracoes.gd" id="1_u4eu3"]
[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="2_lcyg2"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_u4eu3")

[node name="Bordertest" type="Sprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(1.0729, 1.04026)
texture = ExtResource("1_nn38w")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FXHSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 397.0
offset_top = 369.0
offset_right = 897.0
offset_bottom = 385.0
value = 10.0

[node name="MusicHSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 399.0
offset_top = 281.0
offset_right = 899.0
offset_bottom = 297.0
value = 10.0

[node name="Musica" type="Label" parent="UI"]
layout_mode = 0
offset_left = 109.0
offset_top = 273.0
offset_right = 286.0
offset_bottom = 332.0
theme_override_font_sizes/font_size = 20
text = "Volume da música"

[node name="Efeitos" type="Label" parent="UI"]
layout_mode = 0
offset_left = 110.0
offset_top = 361.0
offset_right = 377.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 20
text = "Volume dos efeitos sonoros"

[node name="FullScreen" type="Label" parent="UI"]
layout_mode = 0
offset_left = 105.0
offset_top = 439.0
offset_right = 319.0
offset_bottom = 498.0
theme_override_font_sizes/font_size = 20
text = "Estilo de tela"

[node name="FullscreenCheckBox" type="CheckBox" parent="UI"]
layout_mode = 0
offset_left = 398.0
offset_top = 407.0
offset_right = 582.0
offset_bottom = 487.0
theme_override_colors/font_pressed_color = Color(0.909804, 0.909804, 0.909804, 1)
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "Tela Cheia"

[node name="ResetButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 788.0
offset_top = 221.0
offset_right = 1106.0
offset_bottom = 257.0
theme_override_font_sizes/font_size = 20
text = "Voltar para Configuração Padrão"

[node name="LabelMensagem" type="Label" parent="UI"]
layout_mode = 0
offset_left = 204.0
offset_top = 184.0
offset_right = 721.0
offset_bottom = 226.0

[node name="Musica" type="Label" parent="."]
offset_left = 256.0
offset_top = 73.0
offset_right = 914.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 60
text = "Configurações de Jogo "

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = 83.0
offset_top = 58.0
offset_right = 595.0
offset_bottom = 570.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("2_lcyg2")

[node name="SaveButton" type="Button" parent="."]
offset_left = 460.0
offset_top = 532.0
offset_right = 630.0
offset_bottom = 563.0
theme_override_font_sizes/font_size = 30
text = "Salvar Configurações"
